Confirm password at registration

--- a/RobotBlog/ClientApp/src/i18n/locales/en.json
+++ b/RobotBlog/ClientApp/src/i18n/locales/en.json
@@ -1,32 +1,34 @@
 {
-    "nav": {
-        "home": "Home",
-        "blog": "Blog",
-        "cv": "CV",
-        "projects": "Projects",
-        "social": "Social"
-    },
-    "not_found": {
-        "not_found": "Page cannot be found"
-    },
-    "lang": {
-        "en": "English",
-        "hu": "Magyar",
-        "language": "Language"
-    },
-    "login": {
-        "login": "Sign in",
-        "register": "Register",
-        "settings": "Settings",
-        "logout": "Sign out",
-        "email": "Email",
-        "password": "Password",
-        "enter-email": "Enter email",
-        "cancel": "Cancel",
-        "failed": "Login failed",
-        "registration-failed": "Registration failed"
-    },
-    "blog": {
-        "not-available": "This content is not available in {{language}}"
-    }
+  "nav": {
+    "home": "Home",
+    "blog": "Blog",
+    "cv": "CV",
+    "projects": "Projects",
+    "social": "Social"
+  },
+  "not_found": {
+    "not_found": "Page cannot be found"
+  },
+  "lang": {
+    "en": "English",
+    "hu": "Magyar",
+    "language": "Language"
+  },
+  "login": {
+    "login": "Sign in",
+    "register": "Register",
+    "settings": "Settings",
+    "logout": "Sign out",
+    "email": "Email",
+    "password": "Password",
+    "enter-email": "Enter email",
+    "cancel": "Cancel",
+    "failed": "Login failed",
+    "registration-failed": "Registration failed",
+    "password-confirmation": "Confirm password",
+    "please-match-passwords": "Passwords must match"
+  },
+  "blog": {
+    "not-available": "This content is not available in {{language}}"
+  }
 }
