username and preferred language

--- a/RobotBlog/ClientApp/src/i18n/locales/en.json
+++ b/RobotBlog/ClientApp/src/i18n/locales/en.json
@@ -20,8 +20,10 @@
     "settings": "Settings",
     "logout": "Sign out",
     "email": "Email",
+    "username": "Username",
     "password": "Password",
     "enter-email": "Enter email",
+    "preferred-language": "Preferred language",
     "cancel": "Cancel",
     "failed": "Login failed",
     "registration-failed": "Registration failed",
