--- a/RobotBlog/ClientApp/src/i18n/locales/hu.json
+++ b/RobotBlog/ClientApp/src/i18n/locales/hu.json
@@ -20,8 +20,10 @@
     "settings": "Beállítások",
     "logout": "Kijelentkezés",
     "email": "Email",
+    "username": "Felhasználónév",
     "password": "Jelszó",
     "enter-email": "Email",
+    "preferred-language": "Preferált nyelv",
     "cancel": "Mégsem",
     "failed": "Bejelentkezés sikertelen",
     "registration-failed": "A regisztráció sikertelen volt",
