--- a/RobotBlog/ClientApp/src/i18n/locales/hu.json
+++ b/RobotBlog/ClientApp/src/i18n/locales/hu.json
@@ -32,7 +32,10 @@
     "activation-successful": "Sikeres aktiváció. Most már bejelentkezhet!",
     "activation-failed": "Az aktiválás sikertelen volt!",
     "401": "Hibás email cím vagy jelszó",
-    "403": "Nem aktivált felhasználó"
+    "403": "Nem aktivált felhasználó",
+    "did-you-forget": "Elfelejtetted a jelszavad?",
+    "reset-password": "Jelszó törlése",
+    "reset-successful": "A jelszó módosítása sikeres volt"
   },
   "blog": {
     "not-available": "Ez a tartalom {{language}} nyelven nem elérhető"
